# desid_datalake

./: .gitignore  .gitmodules  config.yaml  contas_no_bd.xlsx  depesas_capitais_2022.xlsx  pyproject.toml  q  requirements.txt
data/inputs/: ibge.parquet  procedimento_sha.csv  regioes_saude.xlsx  tuss_sigtap_procedimentos.csv  valor_SIGTAP_VALOR_2020_2022_raulino.csv
data/inputs/SIGTAP/: rl_excecao_compatibilidade.txt  rl_procedimento_cid.txt  rl_procedimento_compativel.txt  rl_procedimento_incremento.txt  rl_procedimento_origem.txt  rl_procedimento_registro.txt  rl_procedimento_servico.txt  tb_componente_rede.txt  tb_descricao_detalhe.txt  tb_grupo.txt  tb_grupo_habilitacao.txt  tb_modalidade.txt  tb_procedimento.txt  tb_rede_atencao.txt  tb_registro.txt  tb_regra_condicionada.txt  tb_renases.txt  tb_rubrica.txt
data/inputs/contas/: contas.parquet
data/inputs/entes/: entes_2022.json
data/inputs/mte/: cbo2002.csv  cbo_2002_basedosdados.json
data/inputs/sha/: HC_SIGTAP.xlsx  Planilha_SIGTAP_SHA_areas_tecnicas.xlsx  cnes_tipos_basedosdados.json  natureza_juridica_basedosdados.json  naturezas_juridicas.xlsx  (+11 more)
lib/: db_utils.py  utils.py
models/br_ms/: territorio.sql
notebooks/: bigquery.ipynb  siops_2022.ipynb
notebooks/metadata/: metadata.ipynb  metadata.yaml
tests/audits/: critica-210.sql  critica-210.sql.old  critica-211.sql  critica-220.sql  critica-221.sql  critica-225.sql  critica-230.sql  critica-231.sql  critica-235.sql  critica-246.sql  critica-250.sql.old  critica-256.sql  critica-260.sql  criticas-fundeb.sql  saldo_despesas_positivo.sql
(+143 files in other folders)
